# infra

./: .git-blame-ignore-revs  .gitignore  .gitpod.yml  .pre-commit-config.yaml  Makefile  README.md  action.yml  ansible.cfg  default.nix  dotenv.yaml  dprint.json  flake.new.nix  flake.nix  playbook.yaml  requirements.yaml  shell.nix  site.yaml  treefmt.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
ansible/: .gitignore  README.md  ansible.cfg  cockroachdb.yml  debug.yml  envoy.yml  generate-lock.sh  gost.yml  hosts.yml  jupyterhub.yml  kubernete-preflight.yml  nginx.yml  promtail.yml  requirements.lock.yml  requirements.yml  services.yml  site.yml  ssh-port-forwarding.yml  systemd-resolved.yml  tailscale.yml  vault-ssh-host.yml  wireguard.yml  zerotier.yml
caddy/: go.mod  go.sum  gomod2nix.toml  main.go
cockroachdb/: README.md
coredns/: go.mod  go.sum  gomod2nix.toml  main.go
files/: cockroachdb.yaml  jupyterhub.yaml  jupyterhub.yaml.encrypted  jupyterhub.yaml.secret
fixtures/: wireguard.json
group_vars/: all.yml
home/: .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .gitignore  .pre-commit-config.yaml  Makefile  action.yml  dot_Xresources  dot_ansible.cfg  dot_apvlvrc  dot_bash_profile  dot_bashrc  dot_dotfiles-initialized  dot_gdbinit  dot_ghci  dot_gitconfig.local.tmpl  dot_gitconfig.tmpl  dot_gitignore  dot_haskeline  dot_inputrc  dot_khdrc  dot_latexmkrc  dot_mailcap  dot_offlineimaprc.tmpl  dot_pam_environment.tmpl  dot_pentadactylrc  dot_profile  dot_tmux.conf.local  (+11 more)
wallabag/: Cargo.toml
wallabag/src/: main.rs
(+665 files in other folders)
