[package]
name = "wallabag-saver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wallabag-api = "0.4.1"
futures = "0.3.21"
clap = { version = "3.0.14", features = ["derive"] }
async-std = { version = "1.10.0", features = ["attributes"] }
anyhow = "1.0.53"
